Holiday view added.

--- a/calendar_1day.html
+++ b/calendar_1day.html
@@ -79,7 +79,7 @@
 					<div class="col col-7">		
 						<div class="window">						
 							<div class="title-window">
-								<div class="choose">
+								<!-- <div class="choose">
 									<fieldset>
 										<select>
 											<option value="1">Wybierz gabinet</option>
@@ -87,7 +87,7 @@
 											<option value="3">Remedis</option>
 										</select>
 									</fieldset>
-								</div>
+								</div> -->
 								<div class="box">
 									<a href="#" class="left"><i class="fa fa-angle-left"></i></a>
 									<span>
@@ -101,10 +101,7 @@
 								</div>
 								<div class="legend">
 									<a href="#" class="open"><i class="fa fa-list-ul"></i> Legenda</a>
-									<div class="position">
-										<div class="info">
-											Filtruj
-										</div>
+									<div class="position">									
 										<ul class="cabinet">
 											<li><span class="title">Gabinety:</span></li>
 											<li><span style="background:pink"></span><a href="#">NFZ Róża</a></li>
@@ -310,9 +307,12 @@
 	</div>
 </div>
 
+
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/jquery.nice-select.min.js"></script>
 <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
+<script type="text/javascript" src="js/jquery.minicolors.min.js"></script>
+<script type="text/javascript" src="js/jquery.elastic.js"></script>
 <script type="text/javascript" src="js/chart.min.js"></script> 
 <script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 <script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
