--- a/doctor_about_me.html
+++ b/doctor_about_me.html
@@ -40,7 +40,7 @@
 				<li><a href="#"><i class="fa fa-folder-open-o"></i>Karta Pacjenta</a></li>
 				<li><a href="visit.html"><i class="fa fa-folder-open-o"></i>Moje wizyty</a></li>
 				<li><a href="cabinet_list.html"><i class="fa fa-hospital-o"></i>Gabinet</a></li>
-				<li><a href="#"><i class="fa fa-inbox"></i>Wiadomości</a></li>
+				<li><a href="message.html"><i class="fa fa-inbox"></i>Wiadomości</a></li>
 				<li><a href="my_accout.html"><i class="fa fa-cogs"></i>Moje konto</a></li>
 				<li><a href="statistic.html"><i class="fa fa-bar-chart"></i>Statystyki</a></li>
 				<li><a href="#"><i class="fa fa-sign-out"></i>Wyloguj</a></li>
@@ -58,6 +58,7 @@
 					<ul>						
 						<li><a href="cabinet_list.html"><i class="fa fa-hospital-o"></i><span>Gabinety</span></a></li>
 						<li class="active"><a href="doctor_about_me.html"><i class="fa fa-user-md"></i><span>Strona o mnie</span></a></li>
+						<li class="active"><a href="doctor_about_me.html"><i class="fa fa-calendar-times-o"></i><span>Urlop</span></a></li>
 					</ul>
 				</nav>
 				<div class="action">
@@ -78,7 +79,7 @@
 								</span>								
 							</div>							
 						</div>
-						<ul class="data">
+						<ul class="list">
 							<li>
 								<div class="info one">
 									<span class="title">Zdjęcie profilowe:</span>	
@@ -243,9 +244,12 @@
 	</section>
 </div>
 
+
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/jquery.nice-select.min.js"></script>
 <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
+<script type="text/javascript" src="js/jquery.minicolors.min.js"></script>
+<script type="text/javascript" src="js/jquery.elastic.js"></script>
 <script type="text/javascript" src="js/chart.min.js"></script> 
 <script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 <script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
