--- a/message_mail.html
+++ b/message_mail.html
@@ -173,7 +173,7 @@
 							<ul class="answer">
 								<li>
 									<fieldset>
-										<textarea class="elastic">Niepubliczny Zakład Medycyny Stosowanej</textarea>
+										<textarea class="elastic"></textarea>
 									</fieldset>
 								</li>
 								<li>
@@ -191,10 +191,13 @@
 	</section>
 </div>
 
+
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/jquery.nice-select.min.js"></script>
 <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
- <script type="text/javascript" src="js/chart.min.js"></script> 
+<script type="text/javascript" src="js/jquery.minicolors.min.js"></script>
+<script type="text/javascript" src="js/jquery.elastic.js"></script>
+<script type="text/javascript" src="js/chart.min.js"></script> 
 <script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 <script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
