--- a/my_account.html
+++ b/my_account.html
@@ -98,7 +98,9 @@
 											<div class="field">
 												<fieldset>
 													<input type="text" value="" placeholder="Hasło">												
-												</fieldset>
+												</fieldset>												
+											</div>
+											<div class="field">
 												<fieldset>
 													<input type="text" value="" placeholder="Powtórz hasło">	
 												</fieldset>
@@ -237,11 +239,12 @@
 	</section>
 </div>
 
-
 <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/jquery.nice-select.min.js"></script>
 <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
- <script type="text/javascript" src="js/chart.min.js"></script> 
+<script type="text/javascript" src="js/jquery.minicolors.min.js"></script>
+<script type="text/javascript" src="js/jquery.elastic.js"></script>
+<script type="text/javascript" src="js/chart.min.js"></script> 
 <script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 <script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
