--- a/window_login.html
+++ b/window_login.html
@@ -17,7 +17,7 @@
 <div id="page" class="blue">
 	
 
-	<div id="layer">
+	<div id="layer" class="login">
 		<div class="content">
 			<div class="row">
 				<div class="col">
