--- a/cabinet_list.html
+++ b/cabinet_list.html
@@ -4,12 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Hevicado 2.0</title>
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,300,100' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="elements.css" type="text/css" media="screen" />
+	<link href='https://fonts.googleapis.com/css?family=Hind+Siliguri:400,300,500,600,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="css/jguery.Select.css" type="text/css" media="screen" />	
 </head>
 <body>
 
@@ -18,30 +14,35 @@
 	<label for="trigger">
 		<i class="fa fa-bars"></i>
 	</label>
-	
-	<section id="navigation">	
+
+	<section id="navigation">
 		<div class="user">
 			<span>Jesteś zalogowany jako</span>
 			<div class="images">
 				<img src="images/sample-men.jpg" alt="Mateusz Kowalski">
 			</div>
 			<span class="name">
-				Mateusz<br/>
-				Kowalski
+				<a href="my_account.html">
+				Mateusz<br/>Kowalski
+				</a>
 			</span>
 			<span>Lekarz</span>
+			<div class="switch">
+				<input type="checkbox" name="switch" class="switch-checkbox" id="id5a">
+				<label class="switch-label" for="id5a"></label>
+			</div>
 		</div>
 		<nav>
 			<ul>
 				<li class="active"><a href="search.html"><i class="fa fa-search"></i> Szukaj</a></li>
 				<li><a href="dashboard.html"><i class="fa fa-area-chart"></i>Pulpit</a></li>
 				<li><a href="calendar_30days.html"><i class="fa fa-calendar"></i>Kalnedarz</a></li>
-				<li><a href="card_patient.html"><i class="fa fa-folder-open-o"></i>Karta Pacjenta</a></li>
+				<li><a href="#"><i class="fa fa-folder-open-o"></i>Karta Pacjenta</a></li>
 				<li><a href="visit.html"><i class="fa fa-folder-open-o"></i>Moje wizyty</a></li>
 				<li><a href="cabinet_list.html"><i class="fa fa-hospital-o"></i>Gabinet</a></li>
 				<li><a href="message.html"><i class="fa fa-inbox"></i>Wiadomości</a></li>
 				<li><a href="my_account.html"><i class="fa fa-cogs"></i>Moje konto</a></li>
-				<li><a href="statistic.html"><i class="fa fa-bar-chart"></i>Statystyki</a></li>			
+				<li><a href="statistic.html"><i class="fa fa-bar-chart"></i>Statystyki</a></li>
 				<li><a href="#"><i class="fa fa-sign-out"></i>Wyloguj</a></li>
 			</ul>
 		</nav>
@@ -49,7 +50,8 @@
 			Power by <a href="http://www.herolynx.com" target="_blank">HeroLynx.com</a>
 		</div>
 	</section>
-	<section id="main-content">		
+
+	<section id="main-content">
 		<div id="title">
 			<div class="content">
 				<h2>Gabinet</h2>
@@ -61,28 +63,26 @@
 					</ul>
 				</nav>
 				<div class="action">
-					<a href="#"><i class="fa fa-bell-o"></i><span>20</span></a>
+					<a href="message.html"><i class="fa fa-bell-o"></i><span>20</span></a>
 					<a href="#"><i class="fa fa-power-off"></i></a>
-				</div>				
+				</div>
 			</div>
-		</div>		
-		
-		<section id="cabinet">			
+		</div>
+
+		<section id="cabinet">
 			<div class="row">
-				<div class="col col-5">							
+				<div class="col col-5">
 					<div class="window">
-						<div class="title-window">							
-							<div class="box">								
-								<span>
-									Lista Gabinetów
-								</span>								
-							</div>							
+						<div class="title-window">
+							<div class="title">
+									Lista gabinetow
+							</div>
 						</div>
-						<ul class="list">							
+						<ul class="list">
 							<li class="deactive">
-								<div class="info list">								
+								<div class="info list">
 									<a href="cabinet_info.html">
-										<span class="title">
+										<span class="title name">
 											<i class="fa fa-eye-slash"></i><span>Niepubliczny Zakład Medycyny Stosowanej</span>
 										</span>
 									</a>
@@ -96,7 +96,7 @@
 								</div>
 							</li>
 							<li>
-								<div class="info list">		
+								<div class="info list">
 									<a href="cabinet_info.html">
 										<span class="title">
 											<span>Niepubliczny Zakład Medycyny Stosowanej</span>
@@ -107,14 +107,14 @@
 									<div class="switch">
 										<input type="checkbox" name="switch" class="switch-checkbox" id="id2" checked>
 										<label class="switch-label" for="id2"></label>
-									</div>					
+									</div>
 									<a href="#" class="delete"><i class="fa fa-trash-o"></i></a>
 								</div>
 							</li>
-						</ul>		
+						</ul>
 					</div>
 				</div>
-			</div>			
+			</div>
 		</section>
 	</section>
 
@@ -127,32 +127,32 @@
 							<i class="fa fa-times-circle-o"></i>
 						</a>
 						<ul class="field">
-							<li>	
+							<li>
 								<span>Czy napewno chcesz usunać gabinet</span>
 							</li>
-							<li class="horizontal center line">	
+							<li class="horizontal center line">
 								<label>
 									<div class="checkbox">
 										<input type="checkbox" id="id1a" name="check">
 										<label class="check" for="id1a"></label>
-									</div>		
+									</div>
 								</label>
-								<fieldset>Tak</fieldset>								
-							</li>						
+								<fieldset>Tak</fieldset>
+							</li>
 						</ul>
 						<ul class="action">
-							<li>	
+							<li>
 								<button type="submit" class="btn blue md">
 									<i class="fa fa-check"></i> Zatwierdź
 								</button>
 							</li>
-						</ul>						
-					</div>	
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
 </div>
 
 
@@ -161,7 +161,7 @@
 <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
 <script type="text/javascript" src="js/jquery.minicolors.min.js"></script>
 <script type="text/javascript" src="js/jquery.elastic.js"></script>
-<script type="text/javascript" src="js/chart.min.js"></script> 
+<script type="text/javascript" src="js/chart.min.js"></script>
 <script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 <script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
