--- a/visit_cabinet.html
+++ b/visit_cabinet.html
@@ -4,12 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Hevicado 2.0</title>
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,300,100' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="css/jquery.mCustomScrollbar.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="elements.css" type="text/css" media="screen" />
+	<link href='https://fonts.googleapis.com/css?family=Hind+Siliguri:400,300,500,600,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-	<link rel="stylesheet" href="css/jguery.Select.css" type="text/css" media="screen" />	
 </head>
 <body>
 
@@ -18,8 +14,8 @@
 	<label for="trigger">
 		<i class="fa fa-bars"></i>
 	</label>
-	
-	<section id="navigation">	
+
+	<section id="navigation">
 		<div class="user">
 			<span>Jesteś zalogowany jako</span>
 			<div class="images">
@@ -31,13 +27,17 @@
 				</a>
 			</span>
 			<span>Lekarz</span>
+			<div class="switch">
+				<input type="checkbox" name="switch" class="switch-checkbox" id="id5a">
+				<label class="switch-label" for="id5a"></label>
+			</div>
 		</div>
 		<nav>
 			<ul>
 				<li class="active"><a href="search.html"><i class="fa fa-search"></i> Szukaj</a></li>
 				<li><a href="dashboard.html"><i class="fa fa-area-chart"></i>Pulpit</a></li>
 				<li><a href="calendar_30days.html"><i class="fa fa-calendar"></i>Kalnedarz</a></li>
-				<li><a href="card_patient.html"><i class="fa fa-folder-open-o"></i>Karta Pacjenta</a></li>
+				<li><a href="#"><i class="fa fa-folder-open-o"></i>Karta Pacjenta</a></li>
 				<li><a href="visit.html"><i class="fa fa-folder-open-o"></i>Moje wizyty</a></li>
 				<li><a href="cabinet_list.html"><i class="fa fa-hospital-o"></i>Gabinet</a></li>
 				<li><a href="message.html"><i class="fa fa-inbox"></i>Wiadomości</a></li>
@@ -50,8 +50,8 @@
 			Power by <a href="http://www.herolynx.com" target="_blank">HeroLynx.com</a>
 		</div>
 	</section>
-	
-	<section id="main-content">		
+
+	<section id="main-content">
 		<div id="title">
 			<div class="content">
 				<h2>Moje wizyty</h2>
@@ -66,14 +66,14 @@
 				<div class="action">
 					<a href="#"><i class="fa fa-bell-o"></i><span>20</span></a>
 					<a href="#"><i class="fa fa-power-off"></i></a>
-				</div>				
+				</div>
 			</div>
-		</div>		
-		
+		</div>
+
 		<section id="visit">
 			<div class="content">
 				<div class="row">
-					<div class="col col-7">							
+					<div class="col col-7">
 						<div class="window">
 							<div class="title-window">
 								<div class="choose">
@@ -97,12 +97,12 @@
 									Zaplanowane wizyty na dziś <span>39</span>
 								</div>
 								<div class="legend">
-									<a href="#"><i class="fa fa-list-ul"></i> Legenda</a>									
+									<a href="#"><i class="fa fa-list-ul"></i> Legenda</a>
 									<ul class="position">
 										<li><span style="background:green"></span>Badanie kontrolne (10 min)</li>
 										<li><span style="background:red"></span>Ekstrakcja zęba (20 min)</li>
 										<li><span style="background:orange"></span>Wybielanie zębów (10 min)</li>
-									</ul>									
+									</ul>
 								</div>
 							</div>
 							<ul class="list">
@@ -110,19 +110,19 @@
 									<div class="date-visit plane">
 										21 listopad 2015 r. godz. 12:00<span></span>
 									</div>
-									<div class="box first">		
+									<div class="box first">
 										<span class="name">
-											 Tomasz Terlikowski									
-										</span>		
+											 Tomasz Terlikowski
+										</span>
 										<div class="pic">
 											<div class="images">
 												<img src="images/sample-men.jpg" alt="Mateusz Kowalski">
 												<a href="#" class="more">
 													<i class="fa fa-eye"></i>
 												</a>
-											</div>											
-										</div>											
-									</div>									
+											</div>
+										</div>
+									</div>
 									<div class="box">
 										<span>
 											Powód wizyty
@@ -130,12 +130,12 @@
 										<span class="address">
 											Wizyta kontrolna
 										</span>
-									</div>	
+									</div>
 									<div class="box action">
 										<a href="#"><i class="fa fa-commenting-o"></i></a>
 										<a href="#"><i class="fa fa-star-o"></i></a>
 									</div>
-								</li>								
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -150,7 +150,7 @@
 <script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
 <script type="text/javascript" src="js/jquery.minicolors.min.js"></script>
 <script type="text/javascript" src="js/jquery.elastic.js"></script>
-<script type="text/javascript" src="js/chart.min.js"></script> 
+<script type="text/javascript" src="js/chart.min.js"></script>
 <script type="text/javascript" src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 <script type="text/javascript" src="js/masonry.pkgd.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
