--- a/window_calendar.html
+++ b/window_calendar.html
@@ -10,18 +10,18 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="elements.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-	
+
 </head>
 <body>
 
 <div id="page" class="blue">
-	
+
 
 	<div id="layer" class="calendar_mini">
 		<div class="content">
 			<div class="row">
 				<div class="col">
-					<div id="calendar" class="window">
+					<div id="calendar-mini" class="window">
 						<a href="#" id="cw" class="close">
 							<i class="fa fa-times-circle"></i>
 						</a>
@@ -35,7 +35,7 @@
 							<span>
 								Październik 2015
 							</span>
-							<a href="#"><i class="fa fa-angle-right"></i></a>					
+							<a href="#"><i class="fa fa-angle-right"></i></a>
 						</div>
 						<div class="days">
 							<ul>
@@ -77,14 +77,14 @@
 								<li><a href="#"><span>29</span></a></li>
 								<li><a href="#"><span>30</span></a></li>
 								<li><a href="#"><span>31</span></a></li>
-							</ul>							
+							</ul>
 						</div>
-					</div>	
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
 </div>
 
 
