--- a/window_login.html
+++ b/window_login.html
@@ -5,17 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>Hevicado 2.0</title>
 
-	<link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,300,100' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Hind+Siliguri:400,300,500,600,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 	<link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="elements.css" type="text/css" media="screen" />
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-	
+
 </head>
 <body>
 
 <div id="page" class="blue">
-	
+
 
 	<div id="layer" class="login">
 		<div class="content">
@@ -26,7 +26,7 @@
 							<i class="fa fa-times-circle-o"></i>
 						</a>
 						<ul class="field">
-							<li>	
+							<li>
 								<span>Zaloguj się do systemu</span>
 							</li>
 							<li>
@@ -35,7 +35,7 @@
 									<input type="text">
 								</fieldset>
 							</li>
-							<li class="line">	
+							<li class="line">
 								<label>Hasło:</label>
 								<fieldset>
 									<input type="password">
@@ -43,10 +43,10 @@
 							</li>
 						</ul>
 						<ul class="action">
-							<li>	
-								<button type="submit" class="btn blue md">
+							<li>
+								<a href="dashboard.html"  class="btn blue md">
 									<i class="fa fa-sign-in"></i> Zaloguj się
-								</button>
+								</a>
 							</li>
 							<li class="block line">
 								<a href="#">
@@ -63,13 +63,13 @@
 									<i class="fa fa-google-plus"></i> Zaloguj się przez Facebook
 								</a>
 							</li>
-						</ul>						
-					</div>	
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
 </div>
 
 
